# cyclops-examples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
reference_implementations/: advanced.ipynb  basic.ipynb
reference_implementations/advanced/: evaluation.ipynb  model_report.ipynb
reference_implementations/basic/: getting_started.ipynb  training.ipynb
