[tool.poetry]
name = "p2p-cyclops-workshop"
version = "0.1.0"
description = "A repository for the Principles to Practice: CyclOps for ML monitoring & evaluation workshop"
authors = ["Vector AI Engineering <cyclops@vectorinstitute.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pycyclops = "^0.2.8"
ucimlrepo = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
