[tool.poetry]
name = "p2p-cyclops-workshop"
version = "0.1.0"
description = "A repository for the Principles to Practice: CyclOps for ML monitoring & evaluation workshop"
authors = ["Vector AI Engineering <cyclops@vectorinstitute.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pycyclops = { version = "^0.2.9", extras = ["xgboost"] }
ucimlrepo = "^0.0.7"

[tool.poetry.group.test.dependencies]
pre-commit = "^2.17.0"
nbstripout = "^0.6.1"
ruff = "^0.4.0"
nbqa = { version = "^1.7.0", extras = ["toolchain"] }
pip-audit = "^2.7.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
